 * #909 (Wrong argument type in the API doc)
 * #910 (Graph of a d-dimensionnal distribution)
 * #911 (In the Field class, the getSample and getValues methods are duplicate)
 * #912 (Wrong description of Histogram constructor parameters)
 * #914 (KarhunenLoeveQuadratureAlgorithm crashes for covariance models of dimension>1)
 * #917 (Bug in RandomMixture::computeCDF())
 * #919 (Wrong simplification mechanism in MarginalTransformationEvaluation for Exponential distribution)
 * #921 (Cannot print a FixedExperiment when built from sample and weight)
 * #923 (Fix ExponentialModel::getParameter for diagonal correlation)
 * #927 (Functional chaos is memory hungry)
 * #930 (The getMean method has a weird behavior on parametrized distribution)

== 1.9 release (2017-04-18) == #release-1.9

=== Library ===

==== Major changes ====
 * Integrate otlhs module
 * New function API
 * Canonical format low-rank tensor approximation
 * EGO global optimization algorithm

==== New classes ====
 * SpaceFillingPhiP, SpaceFillingMinDist, SpaceFillingC2
 * LinearProfile, GeometricProfile
 * MonteCarloLHS, SimulatedAnnealingLHS
 * LHSResult
 * MultiStart
 * MethodOfMomentsFactory
 * SymbolicFunction, AggregatedFunction, ComposedFunction, DatabaseFunction, DualLinearCombinationFunction
 * LinearCombinationFunction, LinearFunction, QuadraticFunction, ParametricFunction, IndicatorFunction
 * DistributionTransformation
 * GeneralizedExtremeValue
 * UniVariateFunctionFamily, UniVariateFunctionFactory, TensorizedUniVariateFunctionFactory
 * MonomialFunction, MonomialFunctionFactory
 * KarhunenLoeveSVDAlgorithm
 * RankMCovarianceModel
 * SparseMethod
 * CanonicalTensorEvaluation|Gradient, TensorApproximationAlgorithm|Result
 * GaussLegendre
 * EfficientGlobalOptimization

==== API changes ====
 * Removed deprecated SLSQP, LBFGS and NelderMead classes
 * Removed deprecated QuadraticCumul class
 * Removed classes UserDefinedPair, HistogramPair